chore: restructure flex to avoid overflow

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background: #ffffff;
+  overflow-x: hidden;
 }
 
 h1 {
